--- a/play.html
+++ b/play.html
@@ -2,82 +2,111 @@
 <html>
     <head>
         <title>pranay bhargav raddy bakaram</title>
+        <link rel="stylesheet" href="wilde.css">
     </head>
     <body>
         <h1>Produced by pranay bhargav raddy bakaram</h1>
+
         <h2>The Importance of Being Earnest</h2>
-        <h4>ACT I. Algernon Moncrieff’s Flat in Half-Moon Street, W.</h4>
+
+        <h3>ACT I. Algernon Moncrieff’s Flat in Half-Moon Street, W.</h3>
+
+        <p style="white-space: pre">
+        <p class="stage_directions">SCENE.--_Morning-room in Algernon’s flat in Half-Moon Street. The room is
+            luxuriously and artistically furnished. The sound of a piano is heard
+            in the adjoining room._ 
+        </p>
+        <p class="stage_directions hover">(_Lane is arranging afternoon tea on the table, and after the music has
+            ceased, Algernon enters._)</p>      
+
         <p>
-        JACK.<br>
-        I am in love with Gwendolen. I have come up to town expressly to
-        propose to her.<br>
+        <h6 class="name jack">JACK.</h6>
+        <p class="speech"> I am in love with Gwendolen. I have come up to town expressly to
+        propose to her.</p>
 
-        ALGERNON.<br>
-        I thought you had come up for pleasure? . . . I call that business.<br>
+        <h5 class="algernon">ALGERNON.</h5>
+        <p>I thought you had come up for pleasure? . . . I call that business.</p>
 
-        JACK.<br>
-        How utterly unromantic you are!<br>
+        <h5 class="name jack">JACK.</h5>
+        <p>How utterly unromantic you are!</p>
 
-        ALGERNON.<br>
-        I really don’t see anything romantic in proposing. It is very romantic
+        <h5 class="algernon">ALGERNON.</h5>
+        <p>I really don’t see anything romantic in proposing. It is very romantic
         to be in love. But there is nothing romantic about a definite proposal.
         Why, one may be accepted. One usually is, I believe. Then the
         excitement is all over. The very essence of romance is uncertainty. If
-        ever I get married, I’ll certainly try to forget the fact.<br>
+        ever I get married, I’ll certainly try to forget the fact.</p>
 
-        JACK.<br>
-        I have no doubt about that, dear Algy. The Divorce Court was specially
-        invented for people whose memories are so curiously constituted.<br>
+        <h5 class="name jack">JACK.</h5>
+        <p>I have no doubt about that, dear Algy. The Divorce Court was specially
+        invented for people whose memories are so curiously constituted.</p>
 
-        ALGERNON.<br>
-        Oh! there is no use speculating on that subject. Divorces are made in
-        Heaven—[Jack puts out his hand to take a sandwich. Algernon at once
-        interferes.] Please don’t touch the cucumber sandwiches. They are
-        ordered specially for Aunt Augusta. [Takes one and eats it.]<br>
+        <h5 class="algernon">ALGERNON.</h5>
+        <p>Oh! there is no use speculating on that subject. Divorces are made in
+        Heaven—</p><p class="stage_directions hover">(_Jack puts out his hand to take a sandwich. Algernon at once
+        interferes._)</p><p>Please don’t touch the cucumber sandwiches. They are
+        ordered specially for Aunt Augusta.</p> <p class="stage_directions hover">(_one and eats it._)</p>
 
-        JACK.<br>
-        Well, you have been eating them all the time.<br>
+        <h5 class="name jack">JACK.</h5>
+        <p>Well, you have been eating them all the time.</p>
 
-        ALGERNON.<br>
-        That is quite a different matter. She is my aunt. [Takes plate from
-        below.] Have some bread and butter. The bread and butter is for
-        Gwendolen. Gwendolen is devoted to bread and butter.<br>
+        <h5 class="algernon">ALGERNON.</h5>
+        <p>That is quite a different matter. She is my aunt.</p><p class="stage_directions hover"> (_Takes plate from
+        below._)</p> <p>Have some bread and butter. The bread and butter is for
+        Gwendolen. Gwendolen is devoted to bread and butter.</p>
 
-        JACK.<br>
-        [Advancing to table and helping himself.] And very good bread and
-        butter it is too.<br>
+        <h5 class="name jack">JACK.</h5>
+        <p class="stage_directions hover">(_Advancing to table and helping himself._)</p><p> And very good bread and
+        butter it is too.</p>
 
-        ALGERNON.<br>
-        Well, my dear fellow, you need not eat as if you were going to eat it
+        <h5 class="algernon">ALGERNON.</h5>
+        <p>Well, my dear fellow, you need not eat as if you were going to eat it
         all. You behave as if you were married to her already. You are not
-        married to her already, and I don’t think you ever will be.<br>
+        married to her already, and I don’t think you ever will be.</p>
 
-        JACK.<br>
-        Why on earth do you say that?<br>
+        <h5 class="name jack">JACK.</h5>
+        <p>Why on earth do you say that?</p>
 
-        ALGERNON.<br>
-        Well, in the first place girls never marry the men they flirt with.
-        Girls don’t think it right.<br>
+        <h5 class="algernon">ALGERNON.</h5>
+        <p>Well, in the first place girls never marry the men they flirt with.
+        Girls don’t think it right.</p>
 
-        JACK.<br>
-        Oh, that is nonsense!<br>
+        <h5 class="name jack">JACK.</h5>
+        <p>Oh, that is nonsense!</p>
 
-        ALGERNON.<br>
-        It isn’t. It is a great truth. It accounts for the extraordinary number
+        <h5 class="algernon">ALGERNON.</h5>
+        <p>It isn’t. It is a great truth. It accounts for the extraordinary number
         of bachelors that one sees all over the place. In the second place, I
-        don’t give my consent.<br>
+        don’t give my consent.</p>
 
-        JACK.<br>
-        Your consent!<br>
+        <h5 class="name jack">JACK.</h5>
+        <p>Your consent!</p>
 
-        ALGERNON.<br>
-        My dear fellow, Gwendolen is my first cousin. And before I allow you to
-        marry her, you will have to clear up the whole question of Cecily.
-        [Rings bell.]<br>
+        <h5 class="algernon">ALGERNON.</h5>
+        <p>My dear fellow, Gwendolen is my first cousin. And before I allow you to
+        marry her, you will have to clear up the whole question of Cecily.</p>
+        <p class="stage_directions hover">(_Rings bell._)</p>
 
-        JACK.<br>
-        Cecily! What on earth do you mean? What do you mean, Algy, by Cecily! I
-        don’t know any one of the name of Cecily.<br>
+        <h5 class="name jack">JACK.</h5>
+        <p>Cecily! What on earth do you mean? What do you mean, Algy, by Cecily! I
+        don’t know any one of the name of Cecily.</p>
         </p>
+        <br>
+        <h3>Choosing an actor to play a character and money offered for him</h3>
+        <table class="tableStyle">
+        <tr>
+            <th class="rowNcolumn">Character</th>
+            <th class="rowNcolumn">Actor</th>
+            <th class="rowNcolumn">Offer ($)</th>
+        </tr>
+        <tr>
+            <td class="rowNcolumn">Thor</td>
+            <td class="rowNcolumn">Chris Hemsworth</td>
+            <td class="rowNcolumn">5 million</td>
+        </tr>
+</table>
+
+
+
     </body>
 </html>
