--- a/play.html
+++ b/play.html
@@ -104,7 +104,10 @@
             <td class="rowNcolumn">Chris Hemsworth</td>
             <td class="rowNcolumn">5 million</td>
         </tr>
-</table>
+        </table>
+        <br>
+        
+        <a href="play2.html">Click here to navigate to newly created page!</a>
 
 
 
