--- a/play2.html
+++ b/play2.html
@@ -50,7 +50,12 @@
         inside. It is a very ungentlemanly thing to read a private cigarette
         case.</p>
         </p>
-        <a href="play.html">Click here to navigate to the first created page!</a>
+        <a href="play.html">Click here to navigate to the first created page!</a><br>
+                
+        <ul class="navbar-horizontal">
+        <li> <a href="play.html">play</a></li>
+        <li> <a href="play2.html">play2</a> </li>
+        </ul>
 
     </body>       
 </html>
